# mcp-map-server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  PROGRESS.md  README.md  client.html  examples.md  pyproject.toml  requirements.txt  server.py  server_sse.py  show_california.py  system-prompt.example.md  system-prompt.md  test_client.py  test_local_setup.sh  test_mcp_notebook.ipynb  verify_tools.py
.continue/mcpServers/: map-server.yaml
.github/workflows/: ci.yml
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
src/mcp_map_server/: client.html  server.py
tests/: README.md  common.py  conftest.py  test_connectivity.py  test_prompts.py  test_server.py  test_stdio.py  test_tools.py
web-client/: .gitignore  README.md  index-manual.html  index.html  package.json  vite.config.js
web-client/src/: eventsource-shim.js  main.js  style.css
