[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-map-server"
version = "0.1.0"
description = "A Map Server for the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.1.0",
    "starlette>=0.30.0",
    "sse-starlette>=1.6.0",
    "uvicorn>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0"
]

[project.scripts]
mcp-map-server = "mcp_map_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_map_server"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_map_server/*.html",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

